--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,9 @@
 #Application
 spring.application.name=lms
+spring.profiles.active=local
 server.servlet.context-path=/api
+
+#Database
+spring.datasource.url=jdbc:postgresql://localhost:5432/lmsdb
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.open-in-view=false
