#27 Add application properties

--- a/reactive/src/main/resources/application.properties
+++ b/reactive/src/main/resources/application.properties
@@ -1,1 +1,9 @@
-spring.application.name=Library Magement System Reactive
+#Application
+spring.application.name=lmsr
+spring.profiles.active=local
+server.servlet.context-path=/api
+server.port=8081
+
+#Database
+spring.r2dbc.url=r2dbc:postgresql://localhost:5432/lmsdb
+spring.sql.init.mode=always
