--- a/core/src/main/resources/application.properties
+++ b/core/src/main/resources/application.properties
@@ -7,3 +7,10 @@ server.servlet.context-path=/api
 spring.datasource.url=jdbc:postgresql://localhost:5432/lmsdb
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.open-in-view=false
+
+#Logging
+logging.file.name=log/application.log
+logging.level.root=WARN
+logging.level.com.huseyinsarsilmaz=INFO
+logging.file.max-size=10MB
+logging.file.total-size-cap=100MB
