--- a/core/src/main/resources/application.properties
+++ b/core/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.jpa.open-in-view=false
 
 #Logging
 logging.file.name=log/application.log
-logging.level.root=WARN
+logging.level.root=INFO
 logging.level.com.huseyinsarsilmaz=INFO
 logging.file.max-size=10MB
 logging.file.total-size-cap=100MB
